base/namespace/triton/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triton
spec:
  selector:
    matchLabels:
      app: triton
  template:
    metadata:
      labels:
        app: triton
    spec:
      volumes:
      - name: models
        emptyDir: {}
      containers:
      - name: triton
        ports:
        - containerPort: 8000
        - containerPort: 8001
        - containerPort: 8002
        command:
        - tritonserver
        - --model-repository
        - /models
        image: nvcr.io/nvidia/tritonserver:24.06-py3
        volumeMounts:
        - name: models
          mountPath: /models
